--- a/项目指南.md
+++ b/项目指南.md
@@ -34,7 +34,7 @@ elastic search 7.17.0
 
 项目提交规范基于 [Conventional Commits](https://www.conventionalcommits.org/en/v1.0.0-beta.4/)
 
-原则上标题全部小写,内容首字母大写。
+原则上标题全部小写,内容首字母大写。0
 
 提交消息的结构如下：
 
