doc: modify project guide

--- a/项目指南.md
+++ b/项目指南.md
@@ -68,7 +68,7 @@ feature(backend)：support login and register
 
 #### 代码管理 github
 
-我们在github上搭建项目私有仓库进行代码管理，各个成员创建自己独立的分支进行开发，功能开发完成后上传至自己的远程分支并提交Merge Request，在通过代码评审后被合并至主分支，否则将被要求修改代码后重新上传，以此保证主分支代码质量和可用性
+我们在github上搭建项目私有仓库进行代码管理，各个成员创建自己独立的分支进行开发，功能开发完成后上传至自己的远程分支并提交Merge Request，在通过代码评审后被合并至主分支，否则将被要求修改代码后重新上传，以此保证主分支代码质量和可用性。
 
 ### 项目部署
 
